# rust_todo

./: Cargo.toml
migrations/2022-09-14-190133_init/: down.sql  up.sql
migrations/2022-09-14-192145_user_todo_relation/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  schema.rs  todo_commands.rs  todo_list_renderer.rs  utils.rs
src/api/: api.rs  auth_handler.rs  auth_utils.rs  errors.rs  mod.rs  todos_handler.rs
src/api/dtos/: auth.rs  mod.rs  todo.rs
src/api/middlewares/: auth.rs
src/models/: mod.rs  todo_model.rs  user_model.rs
src/ui/: app.rs  mod.rs  todo_list_renderer.rs
